// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage It should show <ProductImage /> properly with the custom image 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="test-image.png"
/>
`;

exports[`ProductImage It should show the component with the product image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
